@@ -4,9 +4,6 @@ Modifications needed for getting rid of Qt3Support dependency
 - property editor; property editor item
     - fix glitch of reset button disappearing when horiznotally resizing the property editor
     - fix color of text / background in property editor
-- QTextEdit
-    -> fix resizing of the editor to minimal needed size for rendering
-
 
 TODO items before the next release
 =======
