@@ -181,3 +181,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - got rid of Qt3Support dependency
 - integrated changes needed for build on OS X, see emails
 - fix: on 'no item selected', the old properties still remain there
+- fixed resizing of QTextEdit to minimal needed size for rendering
